--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^6.0.0",
     "axios": "^1.7.8",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.4",
@@ -18,23 +22,23 @@
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sqlite": "^5.1.1",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "eslint": "^9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
